2_prometheus/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    ###  Necessário habilitar a autenticação básica
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/server-snippet: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location / {
        return 302 /prometheus;
      }          
spec:
  ingressClassName: nginx
  rules:
  - host: devopscheats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-service
            port: 
              number: 8000
